--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 </head>
 
 <body>
-    <div>Spotem</div>
-        
+    <svg xmlns="http://www.w3.org/2000/svg"  id="logo" width="601" height="227" viewBox="0 0 601 227">
+        <text transform="translate(0 131)" font-size="192"
+            font-family="AcademyEngravedLetPlain, Academy Engraved LET">
+            <tspan x="0" y="0">Spotem</tspan>
+        </text>
+    </svg>
+
+    <div class="toForm">
+        <button class="button">ログイン</button><br>
+        <button class="button">検索する</button>
+    </div>
+
 </body>
 
 </html>
