model, controller等ディレクトリの配置,.一部cdnへの変更

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="assets/css/bulma.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="assets/css/index.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="assets/js/index.js"></script>
     <link rel="manifest" href="manifest.json">
 </head>
 
@@ -18,23 +21,25 @@
             <div class="container">
                 <div class="columns is-centered is-mobile">
                     <div class="column is-10 is-12-mobile">
-                        <h1 class="title ori-font has-text-warning-light">
+                        <h1 class="title has-text-warning-light">
                             Spotem
                         </h1>
-                        <h2 class="subtitle pt-4">
+                        <h2 class="subtitle py-5">
                             観光SNS
                         </h2>
                     </div>
                 </div>
-                <div class="is-hidden-tablet p-5"></div>
                 <div class="columns is-mobile is-centered">
-                    <div class="buttons column is-10-mobile is-5-tablet is-offset-5-tablet">
-                        <button class="button is-rounded is-warning is-fullwidth">ログイン</button>
-                        <button class="button is-rounded is-primary is-fullwidth">検索する</button>
+                    <div class="buttons column is-10-mobile is-6-tablet is-offset-4-tablet">
+                        <input type="button" name="signup"
+                            class="button is-rounded is-primary is-fullwidth has-text-black mb-4" value="新しく始める">
+                        <input type="button" name="login" class="button is-rounded is-warning is-fullwidth mb-0"
+                            value="ログイン">
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="footer">
             <div class="container">
                 <div class="columns is-centered">
@@ -53,6 +58,55 @@
                 </div>
             </div>
     </section>
+
+    <div id="signup_form" class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+            <header class="modal-card-head has-background-primary-light">
+                <p class="modal-card-title">アカウントの作成</p>
+                <button class="delete" aria-label="close"></button>
+            </header>
+            <section class="modal-card-body">
+                <div class="control my-4">
+                    <label class="label">ユーザー名</label>
+                    <input class="input is-focused" type="text" placeholder="userid">
+                </div>
+                <div class="control my-4">
+                    <label class="label">パスワード</label>
+                    <input class="input is-focused" type="password" placeholder="password">
+                </div>
+                <div class="control my-4">
+                    <label class="label">パスワード - 確認</label>
+                    <input class="input is-focused" type="_password" placeholder="password">
+                </div>
+            </section>
+            <footer class="modal-card-foot has-background-primary-light">
+                <button class="button is-primary is-fullwidth">登録</button>
+            </footer>
+        </div>
+    </div>
+    <div id="login_form" class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+            <header class="modal-card-head has-background-warning-light">
+                <p class="modal-card-title">ログイン</p>
+                <button class="delete" aria-label="close"></button>
+            </header>
+            <section class="modal-card-body">
+                <div class="control my-4">
+                    <label class="label">ユーザー名</label>
+                    <input class="input is-focused" type="text" placeholder="userid">
+                </div>
+                <div class="control my-4">
+                    <label class="label">パスワード</label>
+                    <input class="input is-focused" type="password" placeholder="password">
+                </div>
+            </section>
+            <footer class="modal-card-foot has-background-warning-light">
+                <button class="button is-warning is-fullwidth">ログイン</button>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
