--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotem</title>
-    <link rel="stylesheet" href="assets/css/bulma.css">
+    <link rel="stylesheet" href="assets/public/bulma.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/public/index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>
+    <script src="assets/public/index.js"></script>
     <link rel="manifest" href="manifest.json">
 </head>
 
@@ -94,12 +94,12 @@
             </header>
             <section class="modal-card-body">
                 <div class="control my-4">
-                    <label class="label">ユーザー名</label>
-                    <input class="input is-focused" type="text" placeholder="userid">
+                    <label class="label">ユーザーID</label>
+                    <input class="input is-focused" name = "userid" type="text" placeholder="userid">
                 </div>
                 <div class="control my-4">
                     <label class="label">パスワード</label>
-                    <input class="input is-focused" type="password" placeholder="password">
+                    <input class="input is-focused" name="password" type="password" placeholder="password">
                 </div>
             </section>
             <footer class="modal-card-foot has-background-warning-light">
