--- a/home.html
+++ b/home.html
@@ -4,10 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home.php/title>
+    <title>home.php</title>
+    <link rel="stylesheet" href="assets/css/bulma.css">
+    <link rel="stylesheet" href="assets/css/home.css">
 </head>
 <body>
-    <h1>home.php(timeline)</h1>
-    <a href="index.html">index</a>
+    <header class="has-text-centered">ホーム</header>
+    <a href="index.html">ログイン</a>
+
+<div class="tabs is-large is-centered" >
+　<ul>
+    <li class="is-active"><a>公式</a></li>
+    <li><a>一般</a></li>
+  </ul>
+</div>
 </body>
 </html>
