--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 </div>
                 <div class="columns is-mobile is-centered">
                     <div class="buttons column is-10-mobile is-6-tablet is-offset-4-tablet">
-                        <input type="button" name="signup"
-                            class="button is-rounded is-primary is-fullwidth has-text-black mb-4" value="新しく始める">
+                        <a href="signup.php" class="button is-rounded is-success is-fullwidth mb-4">アカウント作成</a>
                         <input type="button" name="login" class="button is-rounded is-warning is-fullwidth mb-0"
                             value="ログイン">
                     </div>
