モジュールの実装、サーバーサイドとの通信

--- a/home.html
+++ b/home.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="assets/public/bulma.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="android-chrome-192x192.png">
+    <link rel="icon" type="image/png" href="android-chrome-192×192.png">
     <title>Document</title>
 </head>
-<?php echo $_SESSION['alert']; ?>
 
 <body>
 
