--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="assets/public/auth.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="assets/public/signup.js" defer></script>
+    <script src="assets/public/signup.js" type="module" defer></script>
     <title>新規登録 / Spotem</title>
 </head>
 
@@ -23,7 +23,7 @@
                     </span>
                     &nbsp;戻る
                 </p>
-                <p class="is-size-4 has-text-weight-bold has-text-white my-6 has-text-centered">アカウントを作成</p>
+                <p class="is-size-4 has-text-weight-bold has-text-white mb-5 has-text-centered">アカウントを作成</p>
                 <form action="controller/auth.php" method="post">
                     <div id="__one">
                         <div id="userid" class="field mb-5">
