--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="buttons mt-4">
                     <a href="signup.html" class="button is-rounded is-success is-fullwidth">アカウント作成</a>
                     <!--ゲスト-->
-                    <a href="login.php" class="button is-rounded is-warning is-fullwidth">ログイン</a>
+                    <a href="login.html" class="button is-rounded is-warning is-fullwidth">ログイン</a>
                 </div>
             </div>
         </div>
