--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" class="has-background-black">
 
 <head>
     <meta charset="UTF-8">
@@ -14,101 +14,97 @@
 </head>
 
 <body>
-    <div class="hero is-fullheight has-background-black">
-        <div class="hero-body">
-            <div class="container is-max-desktop">
-                <p class="_back has-text-success is-inline is-hidden">
-                    <span class="icon is-small is-right">
-                        <i class="fas fa-arrow-left"></i>
-                    </span>
-                    &nbsp;戻る
-                </p>
-                <p class="is-size-4 has-text-weight-bold has-text-white mb-5 has-text-centered">アカウントを作成</p>
-                <form action="controller/auth.php" method="post">
-                    <div id="__one">
-                        <div id="userid" class="field mb-5">
-                            <div class="control has-icons-left has-icons-right">
-                                <input class="input is-medium is-rounded" type="text" name="userid" placeholder="ユーザーID">
-                                <span class="icon is-small is-left">
-                                    <i class="fas fa-at"></i>
-                                </span>
-                                <span class="icon is-small is-right">
-                                    <i class="fas"></i>
-                                </span>
-                            </div>
-                            <p class="help is-danger"></p>
-                        </div>
-                        <div id="name" class="field mb-5">
-                            <div class="control has-icons-left has-icons-right">
-                                <input class="input is-medium is-rounded" type="text" name="name" placeholder="名前">
-                                <span class="icon is-small is-left">
-                                    <i class="fas fa-user"></i>
-                                </span>
-                                <span class="icon is-small is-right">
-                                    <i class="fas"></i>
-                                </span>
-                            </div>
-                        </div>
-                        <input class="input button is-rounded is-success _next" type="button" value="次へ" disabled>
+    <div class="px-4 container is-max-desktop">
+        <p class="_back has-text-success is-inline is-hidden">
+            <span class="icon is-small is-right">
+                <i class="fas fa-arrow-left"></i>
+            </span>
+            &nbsp;戻る
+        </p>
+        <p class="is-size-4 has-text-weight-bold has-text-white mb-5 has-text-centered">アカウントを作成</p>
+        <form action="controller/auth.php" method="post">
+            <div id="__one">
+                <div id="userid" class="field mb-5">
+                    <div class="control has-icons-left has-icons-right">
+                        <input class="input is-medium is-rounded" type="text" name="userid" placeholder="ユーザーID">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-at"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                            <i class="fas"></i>
+                        </span>
                     </div>
-                    <div id="__two" class="is-hidden">
-                        <div id="email" class="field mb-5">
-                            <div class="control has-icons-left has-icons-right">
-                                <input class="input is-medium is-rounded" type="email" name="email" placeholder="メールアドレス">
-                                <span class="icon is-small is-left">
-                                    <i class="fas fa-envelope"></i>
-                                </span>
-                                <span class="icon is-small is-right">
-                                    <i class="fas"></i>
-                                </span>
-                            </div>
-                            <p class="help is-danger"></p>
-                        </div>
-                        <div id="password" class="field mb-5">
-                            <div class="control has-icons-left has-icons-right">
-                                <input class="input is-medium is-rounded" type="password" name="password" oncopy="return false" placeholder="パスワード（8文字以上の半角英数）">
-                                <span class="icon is-small is-left">
-                                    <i class="fas fa-lock"></i>
-                                </span>
-                                <span class="icon is-small is-right">
-                                    <i class="fas"></i>
-                                </span>
-                            </div>
-                            <p class="help is-danger"></p>
-                        </div>
-                        <div id="password_check" class="field mb-5">
-                            <div class="control has-icons-left has-icons-right">
-                                <input class="input is-medium is-rounded" type="password" name="password_check" oncopy="return false" placeholder="確認">
-                                <span class="icon is-small is-left">
-                                    <i class="fas fa-lock"></i>
-                                </span>
-                                <span class="icon is-small is-right">
-                                    <i class="fas"></i>
-                                </span>
-                            </div>
-                            <p class="help is-danger"></p>
-                        </div>
-                        <input class="input button is-rounded is-success _next" type="button" value="次へ" disabled>
+                    <p class="help is-danger"></p>
+                </div>
+                <div id="name" class="field mb-5">
+                    <div class="control has-icons-left has-icons-right">
+                        <input class="input is-medium is-rounded" type="text" name="name" placeholder="名前">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-user"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                            <i class="fas"></i>
+                        </span>
                     </div>
-                    <div id="__three" class="is-hidden">
-                        <p class="help is-warning has-text-centered mb-5">メールアドレスに認証コードを送信しました<br>コードを入力してください</p>
-                        <div id="code" class="field mb-5">
-                            <div class="control has-icons-left has-icons-right">
-                                <input class="input is-medium is-rounded" type="num" name="code" placeholder="認証コード">
-                                <span class="icon is-small is-left">
-                                    <i class="fas fa-key"></i>
-                                </span>
-                                <span class="icon is-small is-right">
-                                    <i class="fas"></i>
-                                </span>
-                            </div>
-                            <p class="help is-danger"></p>
-                        </div>
-                        <input class="input button is-rounded is-success _next" type="button" value="登録する" disabled>
-                    </div>
-                </form>
+                </div>
+                <input class="input button is-rounded is-success _next" type="button" value="次へ" disabled>
             </div>
-        </div>
+            <div id="__two" class="is-hidden">
+                <div id="email" class="field mb-5">
+                    <div class="control has-icons-left has-icons-right">
+                        <input class="input is-medium is-rounded" type="email" name="email" placeholder="メールアドレス">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-envelope"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                            <i class="fas"></i>
+                        </span>
+                    </div>
+                    <p class="help is-danger"></p>
+                </div>
+                <div id="password" class="field mb-5">
+                    <div class="control has-icons-left has-icons-right">
+                        <input class="input is-medium is-rounded" type="password" name="password" oncopy="return false" placeholder="パスワード（8文字以上の半角英数）">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                            <i class="fas"></i>
+                        </span>
+                    </div>
+                    <p class="help is-danger"></p>
+                </div>
+                <div id="password_check" class="field mb-5">
+                    <div class="control has-icons-left has-icons-right">
+                        <input class="input is-medium is-rounded" type="password" name="password_check" oncopy="return false" placeholder="確認">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                            <i class="fas"></i>
+                        </span>
+                    </div>
+                    <p class="help is-danger"></p>
+                </div>
+                <input class="input button is-rounded is-success _next" type="button" value="次へ" disabled>
+            </div>
+            <div id="__three" class="is-hidden">
+                <p class="help is-warning has-text-centered mb-5">メールアドレスに認証コードを送信しました<br>コードを入力してください</p>
+                <div id="code" class="field mb-5">
+                    <div class="control has-icons-left has-icons-right">
+                        <input class="input is-medium is-rounded" type="num" name="code" placeholder="認証コード">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-key"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                            <i class="fas"></i>
+                        </span>
+                    </div>
+                    <p class="help is-danger"></p>
+                </div>
+                <input class="input button is-rounded is-success _next" type="button" value="登録する" disabled>
+            </div>
+        </form>
     </div>
 </body>
 
