--- a/signup.html
+++ b/signup.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-    <div class="px-4 container is-max-desktop">
-        <p class="_back has-text-success is-inline is-hidden">
+    <div class="px-4 _content">
+        <p class="_back has-text-success is-inline">
             <span class="icon is-small is-right">
                 <i class="fas fa-arrow-left"></i>
             </span>
             &nbsp;戻る
         </p>
-        <p class="is-size-4 has-text-weight-bold has-text-white mb-5 has-text-centered">アカウントを作成</p>
+        <p class="is-size-4 has-text-weight-bold has-text-white my-5 has-text-centered">アカウントを作成</p>
         <form action="controller/auth.php" method="post">
             <div id="__one">
                 <div id="userid" class="field mb-5">
