--- a/login.html
+++ b/login.html
@@ -14,8 +14,14 @@
 </head>
 
 <body>
-    <div class="px-4 container is-max-desktop">
-        <p class="is-size-4 has-text-weight-bold has-text-white mb-6 has-text-centered">Spotemにログイン</p>
+    <div class="px-4 _content">
+        <a href="/" class="_back has-text-success is-inline">
+            <span class="icon is-small is-right">
+                <i class="fas fa-arrow-left"></i>
+            </span>
+            &nbsp;戻る
+        </a>
+        <p class="is-size-4 has-text-weight-bold has-text-white mb-5 has-text-centered">Spotemにログイン</p>
         <p class="help is-warning has-text-centered mb-5"></p>
         <form action="controller/auth.php" method="post">
             <div class="field mb-5">
