"signup.html"の削除、代わりにs1, s2, s3に分割etc...

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                 <p class="is-size-1 has-text-warning-light">Spotem</p>
                 <p class="is-size-5">観光SNS</p>
                 <div class="buttons mt-4">
-                    <a href="signup.html" class="button is-rounded is-success is-fullwidth">アカウント作成</a>
+                    <a href="s1.php" class="button is-rounded is-success is-fullwidth">アカウント作成</a>
                     <!--ゲスト-->
                     <a href="login.html" class="button is-rounded is-warning is-fullwidth">ログイン</a>
                 </div>
             </div>
         </div>
-        <div class="footer">
+        <div class="footer has-background-black-ter">
             <div class="container is-max-desktop">
-                <small class="is-pulled-right">
+                <small class="is-pulled-right has-text-white-bis">
                     <span class="icon">
                         <i class="far fa-copyright"></i>
                     </span>Kyoto-Computer-Gakuin
